--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -194,6 +194,7 @@ integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgr
             <path d="M12 14l0 3"></path>
             <path d="M16 14l0 3"></path>
         </svg>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam at exercitationem rem magni ducimus, nam, non sit ut eum sint nisi laboriosam iure repellendus placeat eaque a architecto eos mollitia.</p>
     </div>
 </div>
 </footer>   
