SCSS, Animaciones, y SEO

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -5,25 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
-        rel="stylesheet"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;500;700&family=Open+Sans:wght@300;400;500&family=Rubik:ital,wght@0,300;0,500;0,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="../Estilos/estilos.css">
-    <title>Tienda en linea</title>
+    <title>Tienda en linea - Myam</title>
+    <meta name="description" content="Compra los respuestos para tu carro desde la comodidad de tu hogar.">
+    <meta name="keywords" content="Tienda, Repuestos, Mitsubishi, Nissan, Barranquilla, Colombia">
 
     
 
 </head>
 <body>
 <header class="header">
-        <img class="logo" src="/Imagenes/Imagenes/Montero Logo Color.png" alt="Montero y Algo Mas Logo">
+        <a href="./index.html"><img class="logo" src="/Imagenes/Imagenes/Montero Logo Color.png" alt="Montero y Algo Mas Logo"></a>
     <nav class="main-navigation">
         <ul class="main-nav-list">
-            <li><a href="index.html" class="link-nav">Inicio</a></li>
+            <li><a href="../index.html" class="link-nav">Inicio</a></li>
             <li><a href="#" class="link-nav">Nosotros</a></li>
             <li><a href="#" class="link-nav">Portafolio</a></li>
             <li><a href="#" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
@@ -64,7 +63,7 @@
                 </div>
                 <div class="btn-news">
                     <ul>
-                        <li><button class="btn-subs">Suscríbete</button></li>
+                        <li><button class="btn-subs wobble-hor-bottom">Suscríbete</button></li>
                     </ul>
                 </div>
             </div>
@@ -73,7 +72,7 @@
             <h2 class="ttl-ppal">Todos los productos</h2>
             <div class="contenedor-productos">
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Amortiguador-mitsu.jpg" alt="Amortiguador para carro Mitsubishi">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Amortiguador-mitsu.jpg" alt="Amortiguador para carro Mitsubishi">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Amortiguador Mitsubishi Outlander</h3>
                         <p class="price-pdt">$000.000</p>
@@ -81,7 +80,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Anillos-mitsu.jpg" alt="Anillos Motor para carro Mitsubishi">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Anillos-mitsu.jpg" alt="Anillos Motor para carro Mitsubishi">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Anillos Motor Mitsubishi Lancer 4G18</h3>
                         <p class="price-pdt">$000.000</p>
@@ -90,7 +89,7 @@
                 </div>
 
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Bagua_mitsu.jpg" alt="Bomba de agua para carro Mitsubishi">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Bagua_mitsu.jpg" alt="Bomba de agua para carro Mitsubishi">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Bomba de Agua Mitsubishi 4G63</h3>
                         <p class="price-pdt">$000.000</p>
@@ -99,7 +98,7 @@
                 </div>
 
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Bancada-Mitsu.jpg" alt="Casquetes de Bancada para carro Mitsubishi">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Bancada-Mitsu.jpg" alt="Casquetes de Bancada para carro Mitsubishi">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Casquetes de Bancada Mitsubishi Lancer 4G18</h3>
                         <p class="price-pdt">$000.000</p>
@@ -108,7 +107,7 @@
                 </div>
 
                 <div class="producto">
-                        <img class="img-pdt" src="/Imagenes/repuestos/Biela-Mitsu.jpg" alt="Casquetes de Biela para carro Mitsubishi">
+                        <img class="img-pdt" src="../Imagenes/repuestos/Biela-Mitsu.jpg" alt="Casquetes de Biela para carro Mitsubishi">
                         <div class="info-pdt">
                             <h3 class="ttl-pdt">Casquetes de Biela Mitsubishi Lancer 4G18</h3>
                             <p class="price-pdt">$000.000</p>
@@ -117,7 +116,7 @@
                 </div>
 
                 <div class="producto">
-                        <img class="img-pdt" src="/Imagenes/repuestos/Bobina_mitsu.jpg" alt="Bobina para carro Mitsubishi">
+                        <img class="img-pdt" src="../Imagenes/repuestos/Bobina_mitsu.jpg" alt="Bobina para carro Mitsubishi">
                         <div class="info-pdt">
                             <h3 class="ttl-pdt">Bobina Ignicion Lancer CS1</h3>
                             <p class="price-pdt">$000.000</p>
@@ -126,7 +125,7 @@
                 </div>
 
                 <div class="producto">
-                        <img class="img-pdt" src="/Imagenes/repuestos/Bocin-Nissan.jpg" alt="Bocin Rueda para carro Nissan">
+                        <img class="img-pdt" src="../Imagenes/repuestos/Bocin-Nissan.jpg" alt="Bocin Rueda para carro Nissan">
                         <div class="info-pdt">
                             <h3 class="ttl-pdt">Bocin Rueda Nissan</h3>
                             <p class="price-pdt">$000.000</p>
@@ -134,7 +133,7 @@
                         </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Bujias-Nissan.jpg" alt="Bujias para carros Nissan">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Bujias-Nissan.jpg" alt="Bujias para carros Nissan">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Juego de bujias Nissan</h3>
                         <p class="price-pdt">$000.000</p>
@@ -142,7 +141,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Bujias_Mitsu.jpg" alt="Bujias para carros Mitsubishi">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Bujias_Mitsu.jpg" alt="Bujias para carros Mitsubishi">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Juego de bujias Mitsubishi</h3>
                         <p class="price-pdt">$000.000</p>
@@ -150,7 +149,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Cilclutch-Mitsu.jpg" alt="Cilindro Clutch para carros Mitsubishi">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Cilclutch-Mitsu.jpg" alt="Cilindro Clutch para carros Mitsubishi">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Cilindro Clutch Montero V6 3.0 6G72</h3>
                         <p class="price-pdt">$000.000</p>
@@ -158,7 +157,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Clutch_nissan.jpg" alt="Kit embrague para carros Nissan">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Clutch_nissan.jpg" alt="Kit embrague para carros Nissan">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Kit Clutch (Prensa,Disco y Balinera) Nissan D21-D22</h3>
                         <p class="price-pdt">$000.000</p>
@@ -166,7 +165,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/EmpCulata_nissan.jpg" alt="Empaque Culata para carros Nissan">
+                    <img class="img-pdt" src="../Imagenes/repuestos/EmpCulata_nissan.jpg" alt="Empaque Culata para carros Nissan">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Empaque Culata Sentra B13</h3>
                         <p class="price-pdt">$000.000</p>
@@ -174,7 +173,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Pastillas-Nissan.jpg" alt="Pastillas de Freno para carros Nissan">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Pastillas-Nissan.jpg" alt="Pastillas de Freno para carros Nissan">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Pastillas de Freno Altima</h3>
                         <p class="price-pdt">$000.000</p>
@@ -182,7 +181,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Piston-Nissan.jpg" alt="Pistones Motor para carros Nissan">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Piston-Nissan.jpg" alt="Pistones Motor para carros Nissan">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Pistones Motor HR16DE</h3>
                         <p class="price-pdt">$000.000</p>
@@ -190,7 +189,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <img class="img-pdt" src="/Imagenes/repuestos/Rotula_mitsubi.jpg" alt="Rotula suspension para carros Mitsubishi">
+                    <img class="img-pdt" src="../Imagenes/repuestos/Rotula_mitsubi.jpg" alt="Rotula suspension para carros Mitsubishi">
                     <div class="info-pdt">
                         <h3 class="ttl-pdt">Rotula Suspension Mitsubishi V6 3.0</h3>
                         <p class="price-pdt">$000.000</p>
