--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header class="header">
-        <a href="./index.html"><img class="logo" src="/Imagenes/Imagenes/Montero Logo Color.png" alt="Montero y Algo Mas Logo"></a>
+        <a href="./index.html"><img class="logo" src="../Imagenes/Imagenes/Montero Logo Color.png" alt="Montero y Algo Mas Logo"></a>
     <nav class="main-navigation">
         <ul class="main-nav-list">
             <li><a href="../index.html" class="link-nav">Inicio</a></li>
