--- a/index.html
+++ b/index.html
@@ -18,19 +18,33 @@
     <link rel="stylesheet" type="text/css" href="./Estilos/estilos.css" />
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html"><img class="logo" src="./Imagenes/Imagenes/Montero Logo Color.png" alt="Montero y Algo Mas Logo"></a>
-        <nav class="main-navigation">
-<ul class="main-nav-list">
-    <li><a href="#inicio" class="link-nav">Inicio</a></li>
-    <li><a href="#nosotros" class="link-nav">Nosotros</a></li>
-    <li><a href="#portafolio" class="link-nav">Portafolio</a></li>
-    <li><a href="./HTML/shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
-    <li><a href="#blog" class="link-nav">Blog</a></li>
-    <li><a href="#contacto" class="link-nav">Contacto</a></li>
-</ul>
-
-        </nav>    
+    <header>
+        <div class="navbar_">
+            <div class="logo">
+                <a href="./index.html"><img  src="./Imagenes/Imagenes/Montero Logo Color red.png" alt="Montero y Algo Mas Logo"></a>
+            </div>
+            <div class="main-navigation">  
+                    <ul class="main-nav-list">
+                        <li><a href="#inicio" class="link-nav">Inicio</a></li>
+                        <li><a href="#nosotros" class="link-nav">Nosotros</a></li>
+                        <li><a href="#portafolio" class="link-nav">Portafolio</a></li>
+                        <li><a href="./HTML/shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
+                        <li><a href="#blog" class="link-nav">Blog</a></li>
+                        <li><a href="#contacto" class="link-nav">Contacto</a></li>
+                    </ul>
+            </div>  
+                <div class="menu-Btn">
+                    <i class="bi bi-list"></i>
+                </div>
+        </div>  
+        <div class="dropdown_menu">
+            <li><a href="#inicio" class="link-nav">Inicio</a></li>
+                <li><a href="#nosotros" class="link-nav">Nosotros</a></li>
+                <li><a href="#portafolio" class="link-nav">Portafolio</a></li>
+                <li><a href="./HTML/shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
+                <li><a href="#blog" class="link-nav">Blog</a></li>
+                <li><a href="#contacto" class="link-nav">Contacto</a></li>
+        </div>   
     </header>
     <section class="inilogo">
     <div id="inicio" class="sec-incio">
@@ -40,7 +54,7 @@
                 <p class="dtion-inicio">Somos tu lugar de confianza para todas tus necesidades de repuestos automotrices. 
                 Ofrecemos una amplia variedad de piezas de alta calidad y originales para automóviles Mitsubishi y Nissan. 
                 ¡Contáctanos y descubre la solución perfecta para mantener tu automóvil en perfecto estado! </p>
-                <a href="#" class="shake-bottom btn-inicio">Conoce más &rarr;</a>
+                <a href="./HTML/shop.html" class="shake-bottom btn-inicio">Conoce más &rarr;</a>
             </div>
         </div>
     </div> 
@@ -266,7 +280,20 @@
 </div>
 </section>
 
+<script>
+    const menuBtn = document.querySelector('.menu-Btn')
+    const menuBtnIcon = document.querySelector('.menu-Btn i')
+    const dropDownMenu = document.querySelector('.dropdown_menu')
 
+    menuBtn.onclick = function () {
+        dropDownMenu.classList.toggle('open')
+        const isOpen = dropDownMenu.classList.contains('open')
+
+        menuBtnIcon.classList = isOpen
+        ? 'bi bi-x-lg'
+        : 'bi bi-list'
+    }
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
