Final Media Queries

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -49,9 +49,9 @@
 <body>
     <div class="caja">
         <aside>
-            <header>
+            <div class="header">
                 <h1 class="ttl">Montero y Algo Mas</h1>    
-            </header>
+            </div>
             <nav>
                 <ul class="categoria">
                     <li><button class="btn-categoria active"><i class="bi bi-car-front-fill"></i> Todos los productos</button></li>
