--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Montero y Algo Mas - Home</title>
-    <meta name="description" content="Repuestos originales para Mitsubishi y Nissan.">
+    <title>Montero y Algo Mas - Home | La mejor opcion en repuestos para tu carro!🛻</title>
+    <meta name="description" content="Somos tu lugar de confianza para todas tus necesidades de repuestos automotrices. 
+    Ofrecemos una amplia variedad de piezas de alta calidad y originales para automóviles Mitsubishi y Nissan. 
+    ¡Contáctanos y descubre la solución perfecta para mantener tu automóvil en perfecto estado!">
     <meta name="keywords" content="Almacen, Repuestos, Mitsubishi, Nissan, Barranquilla, Colombia">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
