Separe los html

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -10,9 +10,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;500;700&family=Open+Sans:wght@300;400;500&family=Rubik:ital,wght@0,300;0,500;0,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="../Estilos/estilos.css">
-    <title>Tienda en linea - Myam</title>
+    <title>Tienda en linea - Myam 🛒</title>
     <meta name="description" content="Compra los respuestos para tu carro desde la comodidad de tu hogar.">
-    <meta name="keywords" content="Tienda, Repuestos, Mitsubishi, Nissan, Barranquilla, Colombia">
+    <meta name="keywords" content="Tienda, Repuestos,Bujias,Anillos Motor,Pistones,Empaquetaduras,Bocin, Mitsubishi, Nissan, Barranquilla, Colombia">
 
     
 
@@ -26,11 +26,11 @@
             <div class="main-navigation">  
                     <ul class="main-nav-list">
                         <li><a href="../index.html" class="link-nav">Inicio</a></li>
-                        <li><a href="#nosotros" class="link-nav">Nosotros</a></li>
-                        <li><a href="#portafolio" class="link-nav">Portafolio</a></li>
+                        <li><a href="./nosotros.html" class="link-nav">Nosotros</a></li>
+                        <li><a href="./portafolio.html" class="link-nav">Portafolio</a></li>
                         <li><a href="./shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
                         <li><a href="#blog" class="link-nav">Blog</a></li>
-                        <li><a href="#contacto" class="link-nav">Contacto</a></li>
+                        <li><a href="./contacto.html" class="link-nav">Contacto</a></li>
                     </ul>
             </div>  
                 <div class="menu-Btn">
@@ -39,11 +39,11 @@
         </div>  
         <div class="dropdown_menu">
             <li><a href="#inicio" class="link-nav">Inicio</a></li>
-                <li><a href="#nosotros" class="link-nav">Nosotros</a></li>
-                <li><a href="#portafolio" class="link-nav">Portafolio</a></li>
+                <li><a href="./nosotros.html" class="link-nav">Nosotros</a></li>
+                <li><a href="./portafolio.html" class="link-nav">Portafolio</a></li>
                 <li><a href="./HTML/shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
                 <li><a href="#blog" class="link-nav">Blog</a></li>
-                <li><a href="#contacto" class="link-nav">Contacto</a></li>
+                <li><a href="./contacto.html" class="link-nav">Contacto</a></li>
         </div>   
     </header>
 <body>
@@ -236,10 +236,10 @@
         </div>
         <div class="map-pag dos">
             <ul>
-                <li class="map-item"><a class="link-map" href="#nosotros">Sobre Nosotros</a></li>
+                <li class="map-item"><a class="link-map" href="./nosotros.html">Sobre Nosotros</a></li>
                 <li class="map-item"><a class="link-map" href="#blog">Noticias</a></li>
-                <li class="map-item"><a class="link-map" href="./HTML/shop.html">Tienda</a></li>
-                <li class="map-item"><a class="link-map" href="#contacto">Contacto</a></li>
+                <li class="map-item"><a class="link-map" href="./shop.html">Tienda</a></li>
+                <li class="map-item"><a class="link-map" href="./contacto.html">Contacto</a></li>
             </ul>
         </div>
         <div class="redes tres">
