--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -39,12 +39,12 @@
             </div>
     </div>  
     <div class="dropdown_menu">
-        <li><a href="../index.html" class="link-nav">Inicio</a></li>
-            <li><a href="./HTML/nosotros.html" class="link-nav">Nosotros</a></li>
-            <li><a href="#portafolio" class="link-nav">Portafolio</a></li>
-            <li><a href="./HTML/shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
+            <li><a href="../index.html" class="link-nav">Inicio</a></li>
+            <li><a href="./nosotros.html" class="link-nav">Nosotros</a></li>
+            <li><a href="./portafolio.html" class="link-nav">Portafolio</a></li>
+            <li><a href="./shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
             <li><a href="#blog" class="link-nav">Blog</a></li>
-            <li><a href="#contacto" class="link-nav">Contacto</a></li>
+            <li><a href="./contacto.html" class="link-nav">Contacto</a></li>
     </div>   
 </header>
 <body>
@@ -123,7 +123,7 @@ menuBtn.onclick = function () {
 <footer class="footer">
     <div class="footer-box">
         <div class="img-footer uno">
-            <a href="./index.html"><img class="logo-footer" width="70%" src="../Imagenes/Imagenes/Montero Logo Color.png" alt="Montero y Algo Mas Logo"></a>
+            <a href="./index.html"><img class="logo-footer" width="70%" src="../Imagenes/Imagenes/Montero Logo Color.png    " alt="Montero y Algo Mas Logo"></a>
         </div>
         <div class="map-pag dos">
             <ul>
