Correciones Link nav

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -127,10 +127,10 @@ menuBtn.onclick = function () {
         </div>
         <div class="map-pag dos">
             <ul>
-                <li class="map-item"><a class="link-map" href="./HTML/nosotros.html">Sobre Nosotros</a></li>
+                <li class="map-item"><a class="link-map" href="./nosotros.html">Sobre Nosotros</a></li>
                 <li class="map-item"><a class="link-map" href="#blog">Noticias</a></li>
-                <li class="map-item"><a class="link-map" href="./HTML/shop.html">Tienda</a></li>
-                <li class="map-item"><a class="link-map" href="./HTML/contacto.html">Contacto</a></li>
+                <li class="map-item"><a class="link-map" href="./shop.html">Tienda</a></li>
+                <li class="map-item"><a class="link-map" href="./contacto.html">Contacto</a></li>
             </ul>
         </div>
         <div class="redes tres">
