--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -31,7 +31,7 @@
                     <li><a href="#" class="link-nav">Portafolio</a></li>
                     <li><a href="./shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
                     <li><a href="#blog" class="link-nav">Blog</a></li>
-                    <li><a href="#contacto" class="link-nav">Contacto</a></li>
+                    <li><a href="./contacto.html" class="link-nav">Contacto</a></li>
                 </ul>
         </div>  
             <div class="menu-Btn">
@@ -40,9 +40,9 @@
     </div>  
     <div class="dropdown_menu">
         <li><a href="../index.html" class="link-nav">Inicio</a></li>
-            <li><a href="./HTML/nosotros.html" class="link-nav">Nosotros</a></li>
+            <li><a href="./nosotros.html" class="link-nav">Nosotros</a></li>
             <li><a href="./portafolio.html" class="link-nav">Portafolio</a></li>
-            <li><a href="./HTML/shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
+            <li><a href="./shop.html" class="link-nav"><i class="bi bi-bag"></i> Tienda</a></li>
             <li><a href="#blog" class="link-nav">Blog</a></li>
             <li><a href="./contacto.html" class="link-nav">Contacto</a></li>
     </div>   
