Arreglo Imagenes Blog

--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -55,7 +55,7 @@
     <p class="porta-prf">Contamos con una variedad de marcas reconocidas mundialmente!</p>
     <div class="sec-portafolio"> 
         <div class="porta-txt">
-            <p class="porta-prrf">Para nosotros es prioridad brindarte las mejores marcas del mercado. Es por eso que contamos con 
+            <p class="porta-prrf">Para nosotros es prioridad brindarte las mejores productos para tu carro. Es por eso que contamos con 
                 las mejores marcas del mercado, para darte la calidad que tu carro necesita. </p>
         </div>  
         <div class="img-slider">
